@@ -1,3 +1,4 @@
+- add faulthandler support
 v0.1.28 (2018-08-21)
 - wrap exception around dbm sync
 - add missing handler for httplib
